--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Decima Aplicaci√≥n</title>
-
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <!--grupo CSS-->
 <link rel="stylesheet" href="css/tema-app10.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css"/>
@@ -15,8 +15,8 @@
 <script src="js/acciones.js"></script>
 <script src="phonegap.js"></script>
 <!-- Start WOWSlider.com HEAD section -->
-<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-<script type="text/javascript" src="engine1/jquery.js"></script>
+<link rel="stylesheet" type="text/css" href="engine2/style.css" />
+<script type="text/javascript" src="engine2/jquery.js"></script>
 <!-- End WOWSlider.com HEAD section -->
 
 <!-- Start WOWSlider.com HEAD section -->
@@ -274,32 +274,33 @@ Es durante el gobierno de la primera audiencia que fray Toribio de Benavente, ‚Ä
 <div data-role="content" align="center">
 <div>
 <!-- Start WOWSlider.com BODY section -->
-<div id="wowslider-container1">
+<div id="wowslider-container2">
 <div class="ws_images"><ul>
-		<li><img src="data1/images/comida1.jpg" alt="COMIDA1" title="COMIDA1" id="wows1_0"/></li>
-		<li><img src="data1/images/comida2.jpg" alt="COMIDA2" title="COMIDA2" id="wows1_1"/></li>
-		<li><img src="data1/images/comida3.jpg" alt="COMIDA3" title="COMIDA3" id="wows1_2"/></li>
-		<li><img src="data1/images/comida4.jpg" alt="COMIDA4" title="COMIDA4" id="wows1_3"/></li>
-		<li><img src="data1/images/comida5.jpg" alt="COMIDA5" title="COMIDA5" id="wows1_4"/></li>
-		<li><img src="data1/images/comida6.jpg" alt="COMIDA6" title="COMIDA6" id="wows1_5"/></li>
-		<li><a href="http://wowslider.com"><img src="data1/images/comida7.jpg" alt="wowslideshow" title="COMIDA7" id="wows1_6"/></a></li>
-		<li><img src="data1/images/logo.png" alt="LOGO" title="LOGO" id="wows1_7"/></li>
+		<li><img src="data2/images/comida1.jpg" alt="COMIDA1" title="COMIDA1" id="wows2_0"/></li>
+		<li><img src="data2/images/comida2.jpg" alt="COMIDA2" title="COMIDA2" id="wows2_1"/></li>
+		<li><img src="data2/images/comida3.jpg" alt="COMIDA3" title="COMIDA3" id="wows2_2"/></li>
+		<li><img src="data2/images/comida4.jpg" alt="COMIDA4" title="COMIDA4" id="wows2_3"/></li>
+		<li><img src="data2/images/comida5.jpg" alt="COMIDA5" title="COMIDA5" id="wows2_4"/></li>
+		<li><img src="data2/images/comida6.jpg" alt="COMIDA6" title="COMIDA6" id="wows2_5"/></li>
+		<li><a href="http://wowslider.com"><img src="data2/images/comida7.jpg" alt="bootstrap carousel" title="COMIDA7" id="wows2_6"/></a></li>
+		<li><img src="data2/images/logo.png" alt="LOGO" title="LOGO" id="wows2_7"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="COMIDA1"><span><img src="data1/tooltips/comida1.jpg" alt="COMIDA1"/>1</span></a>
-		<a href="#" title="COMIDA2"><span><img src="data1/tooltips/comida2.jpg" alt="COMIDA2"/>2</span></a>
-		<a href="#" title="COMIDA3"><span><img src="data1/tooltips/comida3.jpg" alt="COMIDA3"/>3</span></a>
-		<a href="#" title="COMIDA4"><span><img src="data1/tooltips/comida4.jpg" alt="COMIDA4"/>4</span></a>
-		<a href="#" title="COMIDA5"><span><img src="data1/tooltips/comida5.jpg" alt="COMIDA5"/>5</span></a>
-		<a href="#" title="COMIDA6"><span><img src="data1/tooltips/comida6.jpg" alt="COMIDA6"/>6</span></a>
-		<a href="#" title="COMIDA7"><span><img src="data1/tooltips/comida7.jpg" alt="COMIDA7"/>7</span></a>
-		<a href="#" title="LOGO"><span><img src="data1/tooltips/logo.png" alt="LOGO"/>8</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">http://wowslider.net/</a> by WOWSlider.com v8.7</div>
+		<a href="#" title="COMIDA1"><span><img src="data2/tooltips/comida1.jpg" alt="COMIDA1"/>1</span></a>
+		<a href="#" title="COMIDA2"><span><img src="data2/tooltips/comida2.jpg" alt="COMIDA2"/>2</span></a>
+		<a href="#" title="COMIDA3"><span><img src="data2/tooltips/comida3.jpg" alt="COMIDA3"/>3</span></a>
+		<a href="#" title="COMIDA4"><span><img src="data2/tooltips/comida4.jpg" alt="COMIDA4"/>4</span></a>
+		<a href="#" title="COMIDA5"><span><img src="data2/tooltips/comida5.jpg" alt="COMIDA5"/>5</span></a>
+		<a href="#" title="COMIDA6"><span><img src="data2/tooltips/comida6.jpg" alt="COMIDA6"/>6</span></a>
+		<a href="#" title="COMIDA7"><span><img src="data2/tooltips/comida7.jpg" alt="COMIDA7"/>7</span></a>
+		<a href="#" title="LOGO"><span><img src="data2/tooltips/logo.png" alt="LOGO"/>8</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">http://wowslider.com/</a> by WOWSlider.com v8.7</div>
 <div class="ws_shadow"></div>
 </div>	
-<script type="text/javascript" src="engine1/wowslider.js"></script>
-<script type="text/javascript" src="engine1/script.js"></script>
+<script type="text/javascript" src="engine2/wowslider.js"></script>
+<script type="text/javascript" src="engine2/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
+
  <div data-role="collapsible" data-content-theme="false">
    <h1>GASTRONOMIA</h1>
    <div><p>No te puedes ir de Atlixco sin probar estos platillos en sus tradicionales Mercados o restaurantes del municipio.</p>
