--- a/wowslider-howto.html
+++ b/wowslider-howto.html
@@ -6,8 +6,8 @@
 	<meta name="description" content="WOWSlider" />
 	
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-	<script type="text/javascript" src="engine1/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="engine2/style.css" />
+	<script type="text/javascript" src="engine2/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 
 
@@ -104,36 +104,36 @@
 <br>
 
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-<div id="wowslider-container1">
+<div id="wowslider-container2">
 <div class="ws_images"><ul>
-		<li><img src="data1/images/villa1.jpg" alt="VILLA1" title="VILLA1" id="wows1_0"/></li>
-		<li><img src="data1/images/villa2.jpg" alt="VILLA2" title="VILLA2" id="wows1_1"/></li>
-		<li><img src="data1/images/villa3.jpg" alt="VILLA3" title="VILLA3" id="wows1_2"/></li>
-		<li><img src="data1/images/villa4.jpg" alt="VILLA4" title="VILLA4" id="wows1_3"/></li>
-		<li><img src="data1/images/villa5.jpg" alt="VILLA5" title="VILLA5" id="wows1_4"/></li>
-		<li><img src="data1/images/villa6.jpg" alt="VILLA6" title="VILLA6" id="wows1_5"/></li>
-		<li><a href="http://wowslider.com/vi"><img src="data1/images/villa7.jpg" alt="cssslider" title="VILLA7" id="wows1_6"/></a></li>
-		<li><img src="data1/images/villa8.jpg" alt="VILLA8" title="VILLA8" id="wows1_7"/></li>
+		<li><img src="data2/images/comida1.jpg" alt="COMIDA1" title="COMIDA1" id="wows2_0"/></li>
+		<li><img src="data2/images/comida2.jpg" alt="COMIDA2" title="COMIDA2" id="wows2_1"/></li>
+		<li><img src="data2/images/comida3.jpg" alt="COMIDA3" title="COMIDA3" id="wows2_2"/></li>
+		<li><img src="data2/images/comida4.jpg" alt="COMIDA4" title="COMIDA4" id="wows2_3"/></li>
+		<li><img src="data2/images/comida5.jpg" alt="COMIDA5" title="COMIDA5" id="wows2_4"/></li>
+		<li><img src="data2/images/comida6.jpg" alt="COMIDA6" title="COMIDA6" id="wows2_5"/></li>
+		<li><a href="http://wowslider.com"><img src="data2/images/comida7.jpg" alt="bootstrap carousel" title="COMIDA7" id="wows2_6"/></a></li>
+		<li><img src="data2/images/logo.png" alt="LOGO" title="LOGO" id="wows2_7"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="VILLA1"><span><img src="data1/tooltips/villa1.jpg" alt="VILLA1"/>1</span></a>
-		<a href="#" title="VILLA2"><span><img src="data1/tooltips/villa2.jpg" alt="VILLA2"/>2</span></a>
-		<a href="#" title="VILLA3"><span><img src="data1/tooltips/villa3.jpg" alt="VILLA3"/>3</span></a>
-		<a href="#" title="VILLA4"><span><img src="data1/tooltips/villa4.jpg" alt="VILLA4"/>4</span></a>
-		<a href="#" title="VILLA5"><span><img src="data1/tooltips/villa5.jpg" alt="VILLA5"/>5</span></a>
-		<a href="#" title="VILLA6"><span><img src="data1/tooltips/villa6.jpg" alt="VILLA6"/>6</span></a>
-		<a href="#" title="VILLA7"><span><img src="data1/tooltips/villa7.jpg" alt="VILLA7"/>7</span></a>
-		<a href="#" title="VILLA8"><span><img src="data1/tooltips/villa8.jpg" alt="VILLA8"/>8</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">wowslider</a> by WOWSlider.com v8.7</div>
+		<a href="#" title="COMIDA1"><span><img src="data2/tooltips/comida1.jpg" alt="COMIDA1"/>1</span></a>
+		<a href="#" title="COMIDA2"><span><img src="data2/tooltips/comida2.jpg" alt="COMIDA2"/>2</span></a>
+		<a href="#" title="COMIDA3"><span><img src="data2/tooltips/comida3.jpg" alt="COMIDA3"/>3</span></a>
+		<a href="#" title="COMIDA4"><span><img src="data2/tooltips/comida4.jpg" alt="COMIDA4"/>4</span></a>
+		<a href="#" title="COMIDA5"><span><img src="data2/tooltips/comida5.jpg" alt="COMIDA5"/>5</span></a>
+		<a href="#" title="COMIDA6"><span><img src="data2/tooltips/comida6.jpg" alt="COMIDA6"/>6</span></a>
+		<a href="#" title="COMIDA7"><span><img src="data2/tooltips/comida7.jpg" alt="COMIDA7"/>7</span></a>
+		<a href="#" title="LOGO"><span><img src="data2/tooltips/logo.png" alt="LOGO"/>8</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">http://wowslider.com/</a> by WOWSlider.com v8.7</div>
 <div class="ws_shadow"></div>
 </div>	
-<script type="text/javascript" src="engine1/wowslider.js"></script>
-<script type="text/javascript" src="engine1/script.js"></script>
+<script type="text/javascript" src="engine2/wowslider.js"></script>
+<script type="text/javascript" src="engine2/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
 
 
 <div class="instuction">
-	<p class="note">HTML code for the slider <a href="file:///E:/4 SEMESTRE/DAM/UNIDAD 3/aplicaciones/app10/wowslider.html">E:/4 SEMESTRE/DAM/UNIDAD 3/aplicaciones/app10/wowslider.html</a></p>
+	<p class="note">HTML code for the slider <a href="file:///E:/git/app10-git/wowslider.html">E:/git/app10-git/wowslider.html</a></p>
 
 	<h1>
 		How to add this slider to HTML page
@@ -141,45 +141,45 @@
 
 	<h2><span class="num">1</span> Upload these folders to your server</h2>
 	<ul>
-		<li class="mono">data1/</li>
-		<li class="mono">engine1/</li>
-		<li class="note">Current location: <a href="file:///E:/4 SEMESTRE/DAM/UNIDAD 3/aplicaciones/app10">E:/4 SEMESTRE/DAM/UNIDAD 3/aplicaciones/app10</a>. <br>These folders should be located in the same folder as your html page</li>
+		<li class="mono">data2/</li>
+		<li class="mono">engine2/</li>
+		<li class="note">Current location: <a href="file:///E:/git/app10-git">E:/git/app10-git</a>. <br>These folders should be located in the same folder as your html page</li>
 	</ul>
 
 	<h2><span class="num">2</span> Paste this code to your page between the tags <span class="mono">&lt;head&gt;&lt;/head&gt;</span></h2>
 	<textarea onclick="this.select()">&lt;!-- Start WOWSlider.com HEAD section --&gt;
-&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;engine1/style.css&quot; /&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;engine1/jquery.js&quot;&gt;&lt;/script&gt;
+&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;engine2/style.css&quot; /&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;engine2/jquery.js&quot;&gt;&lt;/script&gt;
 &lt;!-- End WOWSlider.com HEAD section --&gt;</textarea>
 
 
 	<h2><span class="num" style="top: -8px;">3</span> Paste this code to your page between the tags <span class="mono">&lt;body&gt;&lt;/body&gt;</span> in the place that you want the slider to appear</h2>
 	<textarea onclick="this.select()" rows="15">&lt;!-- Start WOWSlider.com BODY section --&gt;
-&lt;div id=&quot;wowslider-container1&quot;&gt;
+&lt;div id=&quot;wowslider-container2&quot;&gt;
 &lt;div class=&quot;ws_images&quot;&gt;&lt;ul&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/villa1.jpg&quot; alt=&quot;VILLA1&quot; title=&quot;VILLA1&quot; id=&quot;wows1_0&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/villa2.jpg&quot; alt=&quot;VILLA2&quot; title=&quot;VILLA2&quot; id=&quot;wows1_1&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/villa3.jpg&quot; alt=&quot;VILLA3&quot; title=&quot;VILLA3&quot; id=&quot;wows1_2&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/villa4.jpg&quot; alt=&quot;VILLA4&quot; title=&quot;VILLA4&quot; id=&quot;wows1_3&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/villa5.jpg&quot; alt=&quot;VILLA5&quot; title=&quot;VILLA5&quot; id=&quot;wows1_4&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/villa6.jpg&quot; alt=&quot;VILLA6&quot; title=&quot;VILLA6&quot; id=&quot;wows1_5&quot;/&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;a href=&quot;http://wowslider.com/vi&quot;&gt;&lt;img src=&quot;data1/images/villa7.jpg&quot; alt=&quot;cssslider&quot; title=&quot;VILLA7&quot; id=&quot;wows1_6&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
-		&lt;li&gt;&lt;img src=&quot;data1/images/villa8.jpg&quot; alt=&quot;VILLA8&quot; title=&quot;VILLA8&quot; id=&quot;wows1_7&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/comida1.jpg&quot; alt=&quot;COMIDA1&quot; title=&quot;COMIDA1&quot; id=&quot;wows2_0&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/comida2.jpg&quot; alt=&quot;COMIDA2&quot; title=&quot;COMIDA2&quot; id=&quot;wows2_1&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/comida3.jpg&quot; alt=&quot;COMIDA3&quot; title=&quot;COMIDA3&quot; id=&quot;wows2_2&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/comida4.jpg&quot; alt=&quot;COMIDA4&quot; title=&quot;COMIDA4&quot; id=&quot;wows2_3&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/comida5.jpg&quot; alt=&quot;COMIDA5&quot; title=&quot;COMIDA5&quot; id=&quot;wows2_4&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/comida6.jpg&quot; alt=&quot;COMIDA6&quot; title=&quot;COMIDA6&quot; id=&quot;wows2_5&quot;/&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;a href=&quot;http://wowslider.com&quot;&gt;&lt;img src=&quot;data2/images/comida7.jpg&quot; alt=&quot;bootstrap carousel&quot; title=&quot;COMIDA7&quot; id=&quot;wows2_6&quot;/&gt;&lt;/a&gt;&lt;/li&gt;
+		&lt;li&gt;&lt;img src=&quot;data2/images/logo.png&quot; alt=&quot;LOGO&quot; title=&quot;LOGO&quot; id=&quot;wows2_7&quot;/&gt;&lt;/li&gt;
 	&lt;/ul&gt;&lt;/div&gt;
 	&lt;div class=&quot;ws_bullets&quot;&gt;&lt;div&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA1&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa1.jpg&quot; alt=&quot;VILLA1&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA2&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa2.jpg&quot; alt=&quot;VILLA2&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA3&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa3.jpg&quot; alt=&quot;VILLA3&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA4&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa4.jpg&quot; alt=&quot;VILLA4&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA5&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa5.jpg&quot; alt=&quot;VILLA5&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA6&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa6.jpg&quot; alt=&quot;VILLA6&quot;/&gt;6&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA7&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa7.jpg&quot; alt=&quot;VILLA7&quot;/&gt;7&lt;/span&gt;&lt;/a&gt;
-		&lt;a href=&quot;#&quot; title=&quot;VILLA8&quot;&gt;&lt;span&gt;&lt;img src=&quot;data1/tooltips/villa8.jpg&quot; alt=&quot;VILLA8&quot;/&gt;8&lt;/span&gt;&lt;/a&gt;
-	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.com&quot;&gt;wowslider&lt;/a&gt; by WOWSlider.com v8.7&lt;/div&gt;
+		&lt;a href=&quot;#&quot; title=&quot;COMIDA1&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/comida1.jpg&quot; alt=&quot;COMIDA1&quot;/&gt;1&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;COMIDA2&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/comida2.jpg&quot; alt=&quot;COMIDA2&quot;/&gt;2&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;COMIDA3&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/comida3.jpg&quot; alt=&quot;COMIDA3&quot;/&gt;3&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;COMIDA4&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/comida4.jpg&quot; alt=&quot;COMIDA4&quot;/&gt;4&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;COMIDA5&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/comida5.jpg&quot; alt=&quot;COMIDA5&quot;/&gt;5&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;COMIDA6&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/comida6.jpg&quot; alt=&quot;COMIDA6&quot;/&gt;6&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;COMIDA7&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/comida7.jpg&quot; alt=&quot;COMIDA7&quot;/&gt;7&lt;/span&gt;&lt;/a&gt;
+		&lt;a href=&quot;#&quot; title=&quot;LOGO&quot;&gt;&lt;span&gt;&lt;img src=&quot;data2/tooltips/logo.png&quot; alt=&quot;LOGO&quot;/&gt;8&lt;/span&gt;&lt;/a&gt;
+	&lt;/div&gt;&lt;/div&gt;&lt;div class=&quot;ws_script&quot; style=&quot;position:absolute;left:-99%&quot;&gt;&lt;a href=&quot;http://wowslider.com&quot;&gt;http://wowslider.com/&lt;/a&gt; by WOWSlider.com v8.7&lt;/div&gt;
 &lt;div class=&quot;ws_shadow&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;	
-&lt;script type=&quot;text/javascript&quot; src=&quot;engine1/wowslider.js&quot;&gt;&lt;/script&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;engine1/script.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;engine2/wowslider.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;engine2/script.js&quot;&gt;&lt;/script&gt;
 &lt;!-- End WOWSlider.com BODY section --&gt;</textarea>
 
 <br><br>
