--- a/wowslider.html
+++ b/wowslider.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Wowslider</title>
+	<title>Http://wowslider.com/</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Made with WOW Slider - Create beautiful, responsive image sliders in a few clicks. Awesome skins and animations. Wowslider" />
+	<meta name="description" content="Made with WOW Slider - Create beautiful, responsive image sliders in a few clicks. Awesome skins and animations. Http://wowslider.com/" />
 	
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-	<script type="text/javascript" src="engine1/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="engine2/style.css" />
+	<script type="text/javascript" src="engine2/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
 <body style="background-color:#d7d7d7;margin:auto">
 	
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-	<div id="wowslider-container1">
+	<div id="wowslider-container2">
 	<div class="ws_images"><ul>
-		<li><img src="data1/images/villa1.jpg" alt="VILLA1" title="VILLA1" id="wows1_0"/></li>
-		<li><img src="data1/images/villa2.jpg" alt="VILLA2" title="VILLA2" id="wows1_1"/></li>
-		<li><img src="data1/images/villa3.jpg" alt="VILLA3" title="VILLA3" id="wows1_2"/></li>
-		<li><img src="data1/images/villa4.jpg" alt="VILLA4" title="VILLA4" id="wows1_3"/></li>
-		<li><img src="data1/images/villa5.jpg" alt="VILLA5" title="VILLA5" id="wows1_4"/></li>
-		<li><img src="data1/images/villa6.jpg" alt="VILLA6" title="VILLA6" id="wows1_5"/></li>
-		<li><a href="http://wowslider.com/vi"><img src="data1/images/villa7.jpg" alt="cssslider" title="VILLA7" id="wows1_6"/></a></li>
-		<li><img src="data1/images/villa8.jpg" alt="VILLA8" title="VILLA8" id="wows1_7"/></li>
+		<li><img src="data2/images/comida1.jpg" alt="COMIDA1" title="COMIDA1" id="wows2_0"/></li>
+		<li><img src="data2/images/comida2.jpg" alt="COMIDA2" title="COMIDA2" id="wows2_1"/></li>
+		<li><img src="data2/images/comida3.jpg" alt="COMIDA3" title="COMIDA3" id="wows2_2"/></li>
+		<li><img src="data2/images/comida4.jpg" alt="COMIDA4" title="COMIDA4" id="wows2_3"/></li>
+		<li><img src="data2/images/comida5.jpg" alt="COMIDA5" title="COMIDA5" id="wows2_4"/></li>
+		<li><img src="data2/images/comida6.jpg" alt="COMIDA6" title="COMIDA6" id="wows2_5"/></li>
+		<li><a href="http://wowslider.com"><img src="data2/images/comida7.jpg" alt="bootstrap carousel" title="COMIDA7" id="wows2_6"/></a></li>
+		<li><img src="data2/images/logo.png" alt="LOGO" title="LOGO" id="wows2_7"/></li>
 	</ul></div>
 	<div class="ws_bullets"><div>
-		<a href="#" title="VILLA1"><span><img src="data1/tooltips/villa1.jpg" alt="VILLA1"/>1</span></a>
-		<a href="#" title="VILLA2"><span><img src="data1/tooltips/villa2.jpg" alt="VILLA2"/>2</span></a>
-		<a href="#" title="VILLA3"><span><img src="data1/tooltips/villa3.jpg" alt="VILLA3"/>3</span></a>
-		<a href="#" title="VILLA4"><span><img src="data1/tooltips/villa4.jpg" alt="VILLA4"/>4</span></a>
-		<a href="#" title="VILLA5"><span><img src="data1/tooltips/villa5.jpg" alt="VILLA5"/>5</span></a>
-		<a href="#" title="VILLA6"><span><img src="data1/tooltips/villa6.jpg" alt="VILLA6"/>6</span></a>
-		<a href="#" title="VILLA7"><span><img src="data1/tooltips/villa7.jpg" alt="VILLA7"/>7</span></a>
-		<a href="#" title="VILLA8"><span><img src="data1/tooltips/villa8.jpg" alt="VILLA8"/>8</span></a>
-	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">wowslider</a> by WOWSlider.com v8.7</div>
+		<a href="#" title="COMIDA1"><span><img src="data2/tooltips/comida1.jpg" alt="COMIDA1"/>1</span></a>
+		<a href="#" title="COMIDA2"><span><img src="data2/tooltips/comida2.jpg" alt="COMIDA2"/>2</span></a>
+		<a href="#" title="COMIDA3"><span><img src="data2/tooltips/comida3.jpg" alt="COMIDA3"/>3</span></a>
+		<a href="#" title="COMIDA4"><span><img src="data2/tooltips/comida4.jpg" alt="COMIDA4"/>4</span></a>
+		<a href="#" title="COMIDA5"><span><img src="data2/tooltips/comida5.jpg" alt="COMIDA5"/>5</span></a>
+		<a href="#" title="COMIDA6"><span><img src="data2/tooltips/comida6.jpg" alt="COMIDA6"/>6</span></a>
+		<a href="#" title="COMIDA7"><span><img src="data2/tooltips/comida7.jpg" alt="COMIDA7"/>7</span></a>
+		<a href="#" title="LOGO"><span><img src="data2/tooltips/logo.png" alt="LOGO"/>8</span></a>
+	</div></div><div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.com">http://wowslider.com/</a> by WOWSlider.com v8.7</div>
 	<div class="ws_shadow"></div>
 	</div>	
-	<script type="text/javascript" src="engine1/wowslider.js"></script>
-	<script type="text/javascript" src="engine1/script.js"></script>
+	<script type="text/javascript" src="engine2/wowslider.js"></script>
+	<script type="text/javascript" src="engine2/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 
 </body>
