--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function MM_swapImage() { //v3.0
    <div><img src="imagenes/ATLIXCO3.gif" width="35%" height="293"></div>
     </div>
        <div data-role="collapsible" data-content-theme="false">
-   <h6>UBICACION EN EN EL MAPA DE PUEBLA</h6>
+   <h1>UBICACION EN EN EL MAPA</h1>
    <div><img src="imagenes/ATLIXCO4.png" width="40%" height="340"></div>
       </div>
      
